# debug_package

./: README.md
control/control_getter/: CMakeLists.txt  package.xml
control/control_getter/src/: control_get_node.cpp
data_collect_pkg/: package.xml  setup.cfg  setup.py
data_collect_pkg/data_collect_pkg/: data_collect_node.py
debug_package_launch/: CMakeLists.txt  package.xml
debug_package_launch/launch/: data_collect.launch.xml  debug.launch.xml  path_plot.launch.xml
objects/ai_object_interface/: CMakeLists.txt  package.xml
objects/object_getter/: CMakeLists.txt  package.xml
objects/object_getter/src/: object_getter_node.cpp  object_save_node.cpp  position_recorder_node.cpp
odom/odom_sub_node/: CMakeLists.txt  package.xml
odom/odom_sub_node/src/: odom_save_node.cpp
path/path_getter/: CMakeLists.txt  package.xml
path/path_getter/src/: path_get_node.cpp  path_save_node.cpp
path/path_plotter/: package.xml  setup.cfg  setup.py
path/path_plotter/path_plotter/: path_plot_node.py
path/simple_path_interface/: CMakeLists.txt  package.xml
path/simple_path_interface/msg/: PathCoordinates.msg
