<?xml version="1.0"?>
<package format="3">
  <name>object_getter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ky.37f.9850@s.thers.ac.jp">arata22</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ai_object_interface</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
